# ros_interface_mpc

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
launch/: bullet.launch.py  go2.launch.py  robot.launch.py  test.launch.py
msg/: InitialState.msg  InputMessage.msg  RobotState.msg  State.msg  Torque.msg  Trajectory.msg
ros_interface_mpc_utils/: conversions.py
rviz/: rviz_basic_settings.rviz
scripts/: input.py  interpolator_controller.py  mpc.py  ocp_solver.py  pinocchio_go2.py  publisher.py  publisher_go2.py  robot_utils.py  simulation_args.py  simulation_utils.py  subscriber.py  subscriber_bullet.py  subscriber_go2.py  subscriber_test.py
src/: mpc.cpp  publisher_member_function.cpp
urdf/: go2.xml  go2_description.urdf  talos_reduced.urdf
