<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_interface_mpc</name>
  <version>0.0.1</version>
  <description>A ROS interface for optimal control</description>
  <maintainer email="ewen.dantec@inria.fr">edantec</maintainer>
  <license>Apache-2.0</license>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>simple-mpc</exec_depend>
  <exec_depend>example-robot-data</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
